# AI-Engineering

./: README.md
AIBugIntelligenceReporter/: .env.example  LLM.md  Objective.md  findings.md  index.html  package-lock.json  package.json  progress.md  tailwind.config.ts  task_plan.md  tsconfig.json  vercel.json  vite.config.ts
AIBugIntelligenceReporter/api/: analyze.ts
AIBugIntelligenceReporter/src/: App.tsx  index.css
BlastFrameWork_Jira_TestPlanner_AI_Agent/: .env.example  .gitignore  Blast.md  LLM.md  Objective.md  README.md  findings.md  gemini.md  index.html  package-lock.json  package.json  progress.md  render.yaml  task_plan.md  vite.config.js
BlastFrameWork_Jira_TestPlanner_AI_Agent/api/: index.js
BlastFrameWork_Jira_TestPlanner_AI_Agent/architecture/: test-plan-generator-sop.md
BlastFrameWork_Jira_TestPlanner_AI_Agent/scripts/: dev.mjs
BlastFrameWork_Jira_TestPlanner_AI_Agent/server/: env.js  groqClient.js  index.js  jiraClient.js  testPlanCreator.js
BlastFramework-JiratestPlanner/: .gitignore  BLAST.md  LLM.md  Objective.md  findings.md  gemini.md  package-lock.json  package.json  progress.md  task_plan.md
RestAssuredApiTestingFrameWork/: README.md  pyproject.toml  pytest.ini
RestAssuredApiTestingFrameWork/framework/: __init__.py  config.py  fluent_api.py  logger.py  request_spec.py  response_validator.py
RestAssuredApiTestingFrameWork/test_data/: api_test_data.json  test_cases.csv  test_cases.md
RestAssuredApiTestingFrameWork/tests/: conftest.py  test_invalid_api_flows.py  test_valid_api_flows.py
(+75 files in other folders)
